css/main.css
html, body, div, span, iframe, h1, h2, h3, h4, h5, h6, p, pre, a, address, code, em, img, q, s, strong, b, u, i, center, ol, ul, li, form, label, table, tbody, tr, th, td, article, details, embed, footer, header, nav, section, time, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  line-height: 1.5em;
}

html {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  font-size: 16px;
}

*, *:before, *:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

article, details, footer, header, nav, section {
  display: block;
}

body {
  font-family: 'HelveticaNeue', Helvetica, Arial, sans-serif;
  color: #8D8E90;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background: #1C1D21 url("../img/bg-static.png") no-repeat;
  background-attachment: fixed;
  background-position: center center;
  height: 100%;
}

p {
  text-align: justify;
  margin-bottom: 1em;
  line-height: 2em;
}

ul {
  list-style: none;
}

q {
  quotes: none;
}

q:before,q:after {
  content: '';
  content: none;
}

b {
  font-weight: bold;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

img {
  max-width: 100%;
  height: auto;
  vertical-align: middle;
}

@font-face {
  font-family: 'HelveticaNeue';
  src: url('../fonts/HelveticaNeue.ttf');
  src: url('../fonts/HelveticaNeue.otf');
}

@font-face {
  font-family: 'HelveticaNeueMedium';
  src: url('../fonts/HelveticaNeueMedium.ttf');
  src: url('../fonts/HelveticaNeueMedium.otf');
}

@font-face {
  font-family: 'HelveticaNeueLight';
  src: url('../fonts/HelveticaNeueLight.ttf');
  src: url('../fonts/HelveticaNeueLight.otf');
}

@font-face {
  font-family: 'SourceCodePro';
  src: url('../fonts/SourceCodePro-Regular.otf');
}

.white {
  color: #ffffff;
}

.custom-blue {
  color: #41B6E6;
}

.custom-darker-blue {
  color: #003c54;
}

/* General Containers */

.main-content {
  padding-top: 60px;
}

.container {
  padding: 0 30px;
  margin: 0 auto;
  text-align: center;
}

@media screen and (min-width: 960px) {
  .container {
    width: 100%;
    max-width: 930px;
  }
}

.section {
  padding: 45px 0;
}

.row {
  width: 100%;
  max-width: 930px;
  padding: 25px 30px;
  margin: auto;
  display: flex;
  justify-content: center;
}

.row > div {
  margin: 0 15px;
}

.row > div:first-of-type {
  margin-left: 0;
}

.row > div:last-of-type {
  margin-right: 0;
}

@media screen and (max-width: 767px) {
  .row {
    flex-direction: column;
  }

  .row > * {
    width: 100% !important;
  }

  .row > div {
    margin: 24px 0;
  }

  .row > div:first-of-type {
    margin-top: 0;
  }
  
  .row > div:last-of-type {
    margin-bottom: 0;
  }
}

.row.no-padding-bottom {
  padding-bottom: 0;
}

.col-12 {
  width: 100%;
}

.col-10 {
  width: 83.3333%;
}

.col-8 {
  width: 66.6667%;
}

.col-7 {
  width: 58.3333%;
}

.col-6 {
  width: 50%;
}

.col-5 {
  width: 41.6667%;
}

.col-4 {
  width: 33.3333%;
}

.col-3 {
  width: 25%;
}

.col-2 {
  width: 16.6667%;
}

.flex-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

.clearfix:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0 !important;
  height: 0;
}

/* General Text */

h1, h2, h3, h4, h5 {
  font-family: 'HelveticaNeueLight';
  color: #ffffff;
  padding-bottom: 12px;
}

h1, h2 {
  font-family: 'SourceCodePro';
  text-align: center;
  color: #41B6E6;
}

h1 {
  font-size: 43px;
}

h2 {
  font-size: 26px;
}

h3 {
  font-size: 20px;
}

h4 {
  font-size: 18px;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 0.09em;
  color: #E9E9EA;
  display: table-cell;
  vertical-align: middle;
}

h5 {
  font-size: 16px;
}

a {
  text-decoration: none;
}

p.text-center, .text-center p {
  text-align: center;
}

a:hover {
  text-decoration: none;
}

strong {
  color: #fff;
  font-weight: bold;
}

.text-left {
  text-align: left;
}

.text-right {
  text-align: right;
}

.cta-row {
  text-align: center;
}

.cta {
  font-family: 'HelveticaNeueMedium';
  background: rgba(0, 0, 0, 0.25);
  border: 1px solid #FFFFFF;
  border-radius: 2px;
  text-transform: uppercase;
  font-size: 14px;
  color: #FFFFFF;
  min-width: 196px;
  text-align: center;
  display: inline-block;
  height: 48px;
  line-height: 48px;
  padding: 0 30px;
  cursor: pointer;
  transition: all 0.3s linear;
}

.cta:hover {
  box-shadow: 0 0 5px 2px rgba(65,182,230,0.5);
}

.cta:focus {
  outline: none;
}

.modal .modal-body .cta.cta-modal {
  width: 100%;
}


.main-content p {
  margin: 1em 0;
  font-weight: 300;
}

a {
  color: #41B6E6;
}

.main-content h2 {
  text-align: center;
}

.header {
  transition: all 0.2s linear;
  padding: 15px 0;
  background-color: #41B6E6;
}

.header.main-page-header {
  background-color: transparent;
  padding: 40px 0;
}

.header .logo {
  float: left;
}

.header .logo a {
  display: inline-block;
  line-height: normal;
}

.header .logo a img {
  height: 45px;
}

.header .navigation {
  float: right;
}

.header .navigation ul li {
  display: inline-block;
  padding-left: 10px;
  padding-right: 10px;
}

.header .navigation ul li a {
  display: block;
  color: #F2F2F2;
  font-family: 'SourceCodePro';
  line-height: 50px;
  font-size: 15px;
  padding: 0 5px;
}

.header .align-center {
  height: 50px;
  line-height: 50px;
}

.header.sticky-header {
  position: fixed;
  width: 100%;
  z-index: 9;
}

.header.main-page-header.header-animate {
  background: #41B6E6;
  padding: 10px 0;
}

.introduction-banner {
  background-size: cover;
  background-position: center center;
  min-height: 100vh;
}

.middle-content {
  padding-top: 132px;
  padding-bottom: 80px;
  height: 100%;
  display: flex;
  align-items: center;
  text-align: center;
}

.middle-content img {
  /*display: block;*/
  margin: auto;
}

.middle-content img.bitnation-logo {
  width: 235px;
}
/* ... */

